@@ -1,0 +1,8 @@
+Title: ibm_svc_host: New check: Status of hosts an IBM SVC / V7000 presents volumes to
+Level: 1
+Component: checks
+Version: 1.2.5i1
+Date: 1395744073
+Class: feature
+
+
