@@ -1,0 +1,80 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2013             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# ails.  You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+# Example output from agent:
+# <<<ibm_svc_host:sep(58)>>>
+# 0:h_esx01:2:4:degraded
+
+def inventory_ibm_svc_host(info):
+    return [(None, None)]
+
+def check_ibm_svc_host(item, _no_params, info):
+    #import pprint; pprint.pprint(info)
+    degraded=0
+    offline=0
+    active=0
+    inactive=0
+    other=0
+    status=0
+    for line in info:
+        if line[4] == 'degraded':
+            degraded += 1
+        elif line[4] == 'offline':
+            offline += 1
+        elif line[4] == 'active':
+            active += 1
+        elif line[4] == 'inactive':
+            inactive += 1
+        else:
+            other +=1
+
+    perfdata = [ ("active",   active),
+                 ("inactive", inactive),
+                 ("degraded", degraded),
+                 ("offline",  offline),
+                 ("other",    other),
+               ]
+    message = "%s hosts active, %s inactive" % (active, inactive)
+
+    if degraded > 0:
+        message += ", %s degraded(!)" % degraded
+        status = 1
+    if offline > 0:
+        message += ", %s offline(!!)" % offline
+        status = 2
+    if other > 0:
+        message += ", %s in an unidentified state(!)" % other
+        status = max(status, 1)
+
+    return status, message, perfdata
+
+check_info["ibm_svc_host"] = {
+    "check_function"        : check_ibm_svc_host,
+    "inventory_function"    : inventory_ibm_svc_host,
+    "service_description"   : "IBM SVC Hosts",
+    "has_perfdata"          : True,
+}
+
