@@ -127,6 +127,7 @@
             NOTE: Please refer to the migration notes!
     * 0735 mem.win: now able to configure swap file levels
     * 0146 innovaphone_priports_l1, innovaphone_priports_l2: New Checks for Innovaphone PRI Ports
+    * 0707 ibm_svc_host: New check: Status of hosts an IBM SVC / V7000 presents volumes to
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
